# rag_evaluation_framework

./: .gitignore  CLAUDE.md  README.md  brainstorm.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  evaluation.md  main.md  metrics.md
evaluation_framework/: __init__.py
evaluation_framework/evaluation/: __init__.py  base_eval.py
rag_evaluation_framework/evaluation/: base_eval.py
rag_evaluation_framework/evaluation/chunker/: base.py  recursive_char_text_splitter.py
rag_evaluation_framework/evaluation/embedder/: openai_embedder.py
rag_evaluation_framework/evaluation/metrics/: base.py
