[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_evaluation_framework"]


[project]
name = "rag-evaluation-framework"
version = "0.1.0"
description = "RAG Evaluation Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langsmith>=0.6.2",
    "pydantic>=2.12.5",
]
